[package]
name = "mirror_bot"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.49"
log = "0.4.20"
dotenvy = "0.15.7"
config = "0.13.3"
clap = { version = "4.4.6", features = ["derive"] }
reqwest = { version = "0.11.20", features = ["blocking", "serde_json", "json"] }
rusqlite = { version = "0.29.0", features = ["chrono", "bundled"] }
chrono = { version = "0.4.31", features = ["serde"] }
regex = "1.9.6"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }

